--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.1.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.31.0",
+    "quill": "^1.3.7",
     "vue": "^3.3.4"
   },
   "devDependencies": {
