--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.31.0",
     "quill": "^1.3.7",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
